--- a/index.html
+++ b/index.html
@@ -136,6 +136,11 @@
     .answer-row { display: flex; gap: 12px; justify-content: center; }
 
     .grid-2 { display: grid; grid-template-columns: 1fr 1fr; gap: 16px; }
+
+    @media (prefers-reduced-motion: reduce) {
+      * { transition: none !important; animation: none !important; }
+    }
+
     @media (max-width: 900px) { .app { grid-template-columns: 1fr; } .sidebar { border-right: none; border-bottom: 1px solid var(--border); } .grid-2 { grid-template-columns: 1fr; } }
   </style>
 </head>
@@ -169,14 +174,55 @@
       Subtle({ children }) { return <div className="muted">{children}</div>; },
     };
 
-    const storeKey = 'arc-cards-v1';
+    const storeKey = 'arc-cards';
     const prefKey = 'arc-cards-theme';
+    const CURRENT_SCHEMA_VERSION = 2;
     const uid = () => (crypto.randomUUID ? crypto.randomUUID() : Math.random().toString(36).slice(2));
 
-    function load() {
-      try { return JSON.parse(localStorage.getItem(storeKey)) || { decks: [], cards: [] }; } catch { return { decks: [], cards: [] }; }
+    function migrate(raw) {
+      if (!raw || typeof raw !== 'object') return { version: CURRENT_SCHEMA_VERSION, decks: [], cards: [] };
+      if (raw.version === undefined) {
+        const decks = (raw.decks || []).map(d => ({ id: d.id || uid(), name: String(d.name || 'Untitled'), createdAt: d.createdAt || Date.now(), updatedAt: Date.now(), color: d.color || null }));
+        const cards = (raw.cards || []).map(c => ({
+          id: c.id || uid(),
+          deckId: c.deckId,
+          front: String(c.front || ''),
+          back: String(c.back || ''),
+          tags: Array.isArray(c.tags) ? c.tags : [],
+          ease: typeof c.ease === 'number' ? c.ease : 2.5,
+          interval: typeof c.interval === 'number' ? c.interval : 0,
+          reps: typeof c.reps === 'number' ? c.reps : 0,
+          lapses: typeof c.lapses === 'number' ? c.lapses : 0,
+          dueAt: typeof c.dueAt === 'number' ? c.dueAt : Date.now(),
+          createdAt: c.createdAt || Date.now(),
+          updatedAt: Date.now(),
+          learningStage: c.learningStage || 0
+        }));
+        raw = { version: 1, decks, cards };
+      }
+      if (raw.version === 1) {
+        raw = { ...raw, version: 2 };
+      }
+      return raw;
     }
-    function save(state) { localStorage.setItem(storeKey, JSON.stringify(state)); }
+
+    function load() {
+      try {
+        const storedV2 = JSON.parse(localStorage.getItem(storeKey + '-v2'));
+        if (storedV2 && storedV2.version) return storedV2;
+      } catch {}
+      try {
+        const legacy = JSON.parse(localStorage.getItem(storeKey + '-v1')) || JSON.parse(localStorage.getItem('arc-cards-v1')) || JSON.parse(localStorage.getItem('arc-cards')) || null;
+        const migrated = migrate(legacy || { decks: [], cards: [] });
+        save(migrated);
+        return migrated;
+      } catch {
+        const empty = { version: CURRENT_SCHEMA_VERSION, decks: [], cards: [] };
+        save(empty);
+        return empty;
+      }
+    }
+    function save(state) { localStorage.setItem(storeKey + '-v2', JSON.stringify(state)); }
 
     function useTheme() {
       const [theme, setTheme] = useState(() => localStorage.getItem(prefKey) || 'system');
@@ -343,7 +389,7 @@
       const current = dueCards[0] || null;
 
       function addDeck(name) {
-        const d = { id: uid(), name };
+        const d = { id: uid(), name, createdAt: Date.now(), updatedAt: Date.now(), color: null };
         setData(s => ({ ...s, decks: [...s.decks, d] }));
         setActiveId(d.id);
       }
@@ -353,7 +399,7 @@
       }
       function addCard(front, back) {
         if (!activeDeck) return;
-        const c = { id: uid(), deckId: activeDeck.id, front, back, interval: 0, ease: 2.5, reps: 0, dueAt: Date.now() };
+        const c = { id: uid(), deckId: activeDeck.id, front, back, tags: [], ease: 2.5, interval: 0, reps: 0, lapses: 0, learningStage: 0, dueAt: Date.now(), createdAt: Date.now(), updatedAt: Date.now() };
         setData(s => ({ ...s, cards: [c, ...s.cards] }));
       }
       function deleteCard(id) {
@@ -362,15 +408,48 @@
       function flip() { setFlipped(v => !v); }
 
       function schedule(card, rating) {
-        const easeStep = { again: -0.2, good: 0, easy: 0.15 }[rating];
-        const base = card.interval || 0;
-        let nextInterval;
-        if (rating === 'again') nextInterval = 1/24; // ~1 hour
-        else if (rating === 'good') nextInterval = Math.max(1, base ? base * 2 : 1);
-        else nextInterval = Math.max(3, base ? base * 3 : 3);
-        const ease = Math.max(1.3, (card.ease || 2.5) + easeStep);
-        const millis = nextInterval * 24 * 60 * 60 * 1000;
-        return { ...card, reps: (card.reps||0)+1, ease, interval: nextInterval, dueAt: Date.now() + millis };
+        const nowMs = Date.now();
+        const learningSteps = [10/60/24, 60/60/24];
+        let { interval = 0, ease = 2.5, reps = 0, lapses = 0, learningStage = 0 } = card;
+        if (interval === 0 || learningStage < learningSteps.length) {
+          if (rating === 'again') {
+            learningStage = 0;
+            reps += 1;
+            return { ...card, reps, lapses, interval: 0, ease, learningStage, dueAt: nowMs + learningSteps[0]*24*60*60*1000, updatedAt: nowMs };
+          } else if (rating === 'good') {
+            reps += 1;
+            if (learningStage < learningSteps.length - 1) {
+              learningStage += 1;
+              return { ...card, reps, interval: 0, ease, learningStage, dueAt: nowMs + learningSteps[learningStage]*24*60*60*1000, updatedAt: nowMs };
+            } else {
+              interval = 1;
+              learningStage = learningSteps.length;
+              return { ...card, reps, interval, ease, learningStage, dueAt: nowMs + interval*24*60*60*1000, updatedAt: nowMs };
+            }
+          } else {
+            reps += 1;
+            interval = 3;
+            learningStage = learningSteps.length;
+            ease = Math.min(3.0, ease + 0.15);
+            return { ...card, reps, interval, ease, learningStage, dueAt: nowMs + interval*24*60*60*1000, updatedAt: nowMs };
+          }
+        }
+        if (rating === 'again') {
+          lapses += 1;
+          ease = Math.max(1.3, ease - 0.2);
+          reps += 1;
+          return { ...card, reps, lapses, interval: 0, ease, learningStage: 0, dueAt: nowMs + learningSteps[0]*24*60*60*1000, updatedAt: nowMs };
+        }
+        if (rating === 'good') {
+          reps += 1;
+          interval = Math.max(1, interval * ease);
+          const millis = interval * 24 * 60 * 60 * 1000;
+          return { ...card, reps, interval, ease, dueAt: nowMs + millis, updatedAt: nowMs };
+        }
+        reps += 1;
+        ease = Math.min(3.0, ease + 0.15);
+        interval = Math.max(3, interval * ease * 1.15);
+        return { ...card, reps, interval, ease, dueAt: nowMs + interval*24*60*60*1000, updatedAt: nowMs };
       }
       function answer(r) {
         if (!current) return;
@@ -378,6 +457,20 @@
         setData(s => ({ ...s, cards: s.cards.map(c => c.id === current.id ? updated : c) }));
         setFlipped(false);
       }
+
+      useEffect(() => {
+        function onKey(e) {
+          if (e.target && ['INPUT','TEXTAREA','SELECT'].includes(e.target.tagName)) return;
+          if (e.code === 'Space') { e.preventDefault(); flip(); }
+          if (e.key === '1') answer('again');
+          if (e.key === '2') answer('good');
+          if (e.key === '3') answer('easy');
+          if (e.key.toLowerCase() === 'j') setFlipped(true);
+          if (e.key.toLowerCase() === 'k') setFlipped(false);
+        }
+        window.addEventListener('keydown', onKey);
+        return () => window.removeEventListener('keydown', onKey);
+      }, [current]);
 
       function exportDeck() {
         if (!activeDeck) return;
@@ -405,7 +498,7 @@
       return (
         <div style={{ display: 'contents' }}>
           <Sidebar decks={decks} activeId={activeId} setActiveId={setActiveId} addDeck={addDeck} deleteDeck={deleteDeck} />
-          <main>
+          <main role="main" aria-live="polite">
             <TopBar theme={theme} setTheme={setTheme} />
             <div className="content">
               <div className="panel">
